# FragmentariumWeb

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  build-version.json  index.html  package-lock.json  package.json  tsconfig.json  uniform-label>|>Lock<|Intensity  vite.config.ts  vitest.config.ts
frag-render/: Cargo.toml  README.md
frag-render/shaders/: debug_gradient.frag  fullscreen_triangle.vert
frag-render/src/: frame_selection.rs  main.rs  native_backend.rs  schema.rs
scripts/: beautify_fragments.py  buildVersionUtils.mjs  bump_build_version.mjs  port_fragmentarium_3d.py  start_server.py
src/: main.tsx
tests/: appButton.test.tsx  buildVersionUtils.test.ts  builtinOptionHelp.test.ts  cameraController.test.ts  collapsibleSection.test.tsx  colorPickerButton.test.tsx  confirmDeleteLocalSystemDialog.test.tsx  definitionEditor.test.tsx  definitionSyntax.test.ts  exportInterpolation.test.ts  exportRenderDialog.test.tsx  fragmentFormatter.test.ts  fragmentParser.test.ts  fragmentariumCompatibility.test.ts  fragmentariumRegistry.test.ts  githubGallerySources.test.ts  helpDialog.test.tsx  imageSizing.test.ts  integratorColorTriplets.test.ts  integratorOptionLayout.test.ts  integrators.test.ts  launchSplashDialog.test.tsx  legacyFragmentariumImportDialog.test.tsx  mandelbulb.json  nativeRenderManifest.test.ts  pngMetadata.test.ts  presetSelection.test.ts  presetText.test.ts  presetTree.test.ts  render.json  saveLocalSystemDialog.test.tsx  sceneShaderComposer.test.ts  sessionGalleryDialog.test.tsx  sessionGalleryZip.test.ts  sessionPathNaming.test.ts  (+13 more)
(+152 files in other folders)
